--- a/style.css
+++ b/style.css
@@ -3,3 +3,15 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    height: 100vh;
+}
+
+a {
+    text-decoration : none;
+}
+
+li {
+    list-style: none;
+}
