Add pointer cursor to buttons and dark background

--- a/style.css
+++ b/style.css
@@ -15,3 +15,15 @@ a {
 li {
     list-style: none;
 }
+
+button {
+    cursor: pointer;
+}
+
+.top, .footer {
+    background-color: #1F2937;
+}
+
+.top {
+    height: 100%;
+}
