--- a/style.css
+++ b/style.css
@@ -2,14 +2,23 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Helvetica, sans-serif;
 }
 
 body {
     height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 a {
     text-decoration : none;
+    color: #E5E7EB;
+}
+
+.header strong {
+    color: #F9FAF8;
+    font-size: 24px;
 }
 
 li {
