--- a/style.css
+++ b/style.css
@@ -13,12 +13,22 @@ body {
 
 a {
     text-decoration : none;
+}
+
+.hero-text p, .links a {
     color: #E5E7EB;
+    font-size: 18px;
 }
 
 .header strong {
     color: #F9FAF8;
     font-size: 24px;
+}
+
+.hero-text h1 {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 800;
 }
 
 li {
@@ -27,6 +37,8 @@ li {
 
 button {
     cursor: pointer;
+    background-color: #3882F6;
+    color: white;
 }
 
 .top, .footer {
