--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
     flex-direction: column;
 }
 
+.quote-container {
+    background-color: #E5E7EB;
+}
+
 a {
     text-decoration : none;
 }
@@ -35,9 +39,16 @@ li {
     list-style: none;
 }
 
+button, .call-to-action {
+    background-color: #3882F6;
+}
+
+.hero-img img {
+    width: 500px;
+}
+
 button {
     cursor: pointer;
-    background-color: #3882F6;
     color: white;
 }
 
@@ -47,4 +58,21 @@ button {
 
 .top {
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 20px;
+    gap: 40px;
+}
+
+.links {
+    display: flex;
+    gap: 18px;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
