--- a/style.css
+++ b/style.css
@@ -50,6 +50,14 @@ button, .call-to-action {
 button {
     cursor: pointer;
     color: white;
+    border: 1px solid #3882F6;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.call-right button {
+    border: 1px solid white;
 }
 
 .top, .footer {
