--- a/style.css
+++ b/style.css
@@ -107,3 +107,16 @@ button {
     justify-content: space-between;
     align-items: baseline;
 }
+
+.mountain-info {
+    padding-top: 50px;
+}
+
+.mountain-info h1 {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 800;
+    color: #1F2937;
+    margin-bottom: 40px;
+}
+
