--- a/style.css
+++ b/style.css
@@ -117,6 +117,12 @@ button {
     font-size: 36px;
     font-weight: 800;
     color: #1F2937;
-    margin-bottom: 40px;
+    margin-bottom: 50px;
 }
 
+.reasons img {
+    width: 200px;
+    height: 200px;
+    border-radius: 5px;
+
+}
