--- a/style.css
+++ b/style.css
@@ -117,12 +117,31 @@ button {
     font-size: 36px;
     font-weight: 800;
     color: #1F2937;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 
 .reasons img {
     width: 200px;
     height: 200px;
-    border-radius: 5px;
+    border-radius: 8px;
+    border: 5px solid #3882F6;
+}
 
+.reasons p {
+    color: #404349;
+    font-family: Verdana, sans-serif;
+    font-size: 15px;
+}
+
+.reasons {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    gap: 25px;
+    padding-bottom: 100px;
+    flex-wrap: wrap;
+}
+
+.reasons > div {
+    max-width: 200px;
 }
