--- a/style.css
+++ b/style.css
@@ -13,6 +13,24 @@ body {
 
 .quote-container {
     background-color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
+}
+
+.quote-text {
+    color: #1F2937;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 200;
+}
+
+.quote-source {
+    text-align: right;
+    color: #1F2937;
+    font-weight: 800;
+    font-size: 18px;
 }
 
 a {
@@ -125,6 +143,7 @@ button {
     height: 200px;
     border-radius: 8px;
     border: 5px solid #3882F6;
+    margin-bottom: 10px;
 }
 
 .reasons p {
@@ -145,3 +164,4 @@ button {
 .reasons > div {
     max-width: 200px;
 }
+
