--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 100px;
+    padding: 100px 170px;
 }
 
 .quote-text {
