Add 50px padding to call and make call to action text bold

--- a/style.css
+++ b/style.css
@@ -72,8 +72,13 @@ button, .call-to-action {
 
 .call-to-action {
     color: white;
+    padding: 50px;
 }
 
+#call {
+    font-weight: bold;
+    font-size: 18px;
+}
 
 .hero-img {
     width: 50%;
