Add 50px gap in call to action

--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ button, .call-to-action {
     display: flex;
     justify-content: space-between;
     width: 900px;
+    gap: 50px;
     align-items: center;
     
 }
