--- a/style.css
+++ b/style.css
@@ -129,6 +129,14 @@ button {
     background-color: #1F2937;
 }
 
+.footer {
+    color: #F9FAF8;
+    padding: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .top {
     min-height: 100vh;
     display: flex;
